Implementação da torre

--- a/Xadrez.csproj
+++ b/Xadrez.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Board.cs" />
+    <Compile Include="Entities\Comparators\ComparePiece.cs" />
     <Compile Include="Entities\Pieces\Pawn.cs" />
     <Compile Include="Entities\Pieces\Piece.cs" />
+    <Compile Include="Entities\Pieces\Tower.cs" />
     <Compile Include="Entities\Utilities\Point.cs" />
     <Compile Include="Entities\Enums\TypePiece.cs" />
     <Compile Include="Exceptions\InvalidColumnException.cs" />
